--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.36.0",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
+    "node-sass": "^9.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-sass-transformer": "^2.1.1",
+    "react-native-splash-screen": "^3.3.0",
+    "sass": "^1.77.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
